Minor adjustments for clarity and testability.